[package]
name = "ttl-checker"
version = "0.1.0"
authors = ["Filip Hornak <sleepy771@gmail.com>"]

[dependencies]
pnet="0.20.0"
time="0.1"
log="0.3.8"
env_logger="0.4.3"
argparse="0.2.1"
lazy_static="1.0.0"
influx_db_client = "0.3.0"
spmc = "0.2.2"

[patch.crates-io]
influx_db_client = { git = 'https://github.com/driftluo/InfluxDBClient-rs' }
